--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -1,6 +1,14 @@
-{{ $favicon := site.Params.favicon | relURL }}
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-{{ hugo.Generator }}
+{{ if .Description }}
+<meta name="description" content="{{ .Description }}">
+{{ else if .IsPage }}
+<meta name="description" content="{{ .Summary | plainify }}">
+{{ else }}
+<meta name="description" content="{{ .Site.Params.Description }}">
+{{ end }}
+{{ with .Keywords }}
+<meta name="keywords" content="{{ range $i, $e := . }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}">
+{{ end }}
 
-<link rel="shorcut icon" href="{{ $favicon }}">
+{{ hugo.Generator }}
