--- a/static/sass/style.sass
+++ b/static/sass/style.sass
@@ -8,7 +8,10 @@ $twitter-blue: #1da1f3
 @import "../../node_modules/bulma/sass/utilities/initial-variables"
 @import "../../node_modules/bulma/sass/utilities/functions"
 
+//$body-size: 14px
+
 // Bulma variable overrides
+$body-size: 14px
 $red: #ff0033
 $blue: #3b4446
 $primary: $red
